--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Go
         uses: actions/setup-go@v4
+      - name: Run tests
+        run: make test
       - name: Run make
         run: make
