--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-name: Build
+name: Test, Build and Release
 
 on:
   push:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -13,6 +13,18 @@ jobs:
         uses: actions/setup-go@v4
       - name: Run tests
         run: make test
-      - name: Run make
-        run: make
-      - run: dpkg-buildpackage -a armhf -us -uc -b
+  build:
+    strategy:
+      matrix:
+        platform: [amd64, arm64, armhf, i386]
+    name: Build for ${{ matrix.platform }}
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v4
+      - name: Build
+        run: dpkg-buildpackage -a ${{ matrix.platform }} -us -uc -b
+    
