--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Go
         uses: actions/setup-go@v4
+      - name: Install dependencies
+        run: sudo apt-get install -y debhelper dh-golang
       - name: Build
         run: dpkg-buildpackage -a ${{ matrix.platform }} -us -uc -b
     
