--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Install Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '>=1.3.3'
       - name: Install dependencies
-        run: sudo apt-get install -y debhelper dh-golang
+        run: sudo apt-get install -y debhelper dh-golang golang-go
       - name: Build
         run: dpkg-buildpackage -a ${{ matrix.platform }} -us -uc -b
     
